# apps/server/src/router.ts
@@ -5,6 +5,7 @@ import { serviceCredentialsRouter } from "./rpc/credentials.js";
 import { membersRouter } from "./rpc/members.js";
 import { orgRouter } from "./rpc/org.js";
 import { scopesRouter } from "./rpc/scopes.js";
+import { surfacesRouter } from "./rpc/surfaces.js";
 import { systemRouter } from "./rpc/system.js";
 
 export const router = {
@@ -16,6 +17,7 @@ export const router = {
   scopes: scopesRouter,
   serviceCredentials: serviceCredentialsRouter,
   system: systemRouter,
+  surfaces: surfacesRouter,
 };
 
 export type Router = typeof router;
